sample/asm/errors/unknown_instruction.asm
.function: main
    prnt (strstore "Hello World!")
    izero 0
    return
.end
